add chat reoute to swagger and add auth
